[project]
name = "bsky-context"
version = "0.1.0"
description = "Crawl Bluesky conversation graphs and store them locally for LLM reasoning"
readme = "README.md"
authors = [
    { name = "Leah Wilson", email = "leahvcwilson@gmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.55",
    "cattrs>=24.1",
    "click>=8.1",
]

[project.scripts]
bsky-context = "bsky_context.cli:main"

[project.urls]
Homepage = "https://github.com/Iteratrix/bluesky-crawler"
Repository = "https://github.com/Iteratrix/bluesky-crawler"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
